// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TableRemoveButton > should render 1`] = `
<div>
  <button
    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 disabled:cursor-not-allowed rounded bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white hover:bg-theme-danger-400 hover:text-white dark:hover:bg-theme-danger-500 focus:ring-theme-danger-300"
    data-testid="TableRemoveButton"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    >
      <div
        class="css-1i4b0eq"
        height="20"
        width="20"
      >
        <svg
          id="trash"
          viewBox="0 0 20 20"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          >
            <path
              d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
            />
          </g>
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`TableRemoveButton > should render compact 1`] = `
<div>
  <button
    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-theme-secondary-700 bg-transparent dark:text-theme-secondary-600 dark:bg-transparent"
    data-testid="TableRemoveButton--compact"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    >
      <div
        class="css-1i4b0eq"
        height="20"
        width="20"
      >
        <svg
          id="trash"
          viewBox="0 0 20 20"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          >
            <path
              d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
            />
          </g>
        </svg>
      </div>
    </div>
  </button>
</div>
`;
